<resources>
    <string name="app_name">GroupStreamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_no_data_connection_error">Can\'t connect to the internet, please check your connection settings</string>
    <string name="default_title">Title</string>
    <string name="default_subtitle">Subtitle</string>
    <string name="default_empty">Sorry, there\'s nothing to show</string>
    <string name="activity_title_ratings">Ratings</string>
    <string name="activity_title_groups">Groups</string>
    <string name="activity_title_prefs">Settings</string>
    <string name="activity_title_main">Group</string>
    <string name="activity_title_help">Help</string>
    <string name="activity_title_solo">Playlists</string>
    <string name="activity_title_solo_main">Solo player</string>
    <string name="activity_title_solo_playlists">Playlists</string>
    <string name="activity_title_signup">Sign Up</string>
    <string name="activity_title_history">Group History</string>
    <string name="activity_title_manage">Set Password</string>
    <string name="activity_title_home">GroupStreamer</string>
    <string name="title_activity_nfcrecieve_group">Join Group Using NFC</string>
    <string name="title_activity_nfcsend_group">Share Group Using NFC</string>
    <string name="title_activity_nfc_management">NfcManagementActivity</string>
    <string name="fragment_title_player">Music</string>
    <string name="fragment_title_stats">Stats</string>
    <string name="solo_fragment_player_title">Music</string>
    <string name="solo_fragment_playlist_title">Tracks</string>
    <string name="solo_fragment_playlists_local_title">Local</string>
    <string name="solo_fragment_playlists_remote_title">Remote</string>
    <string name="menu_title_refresh">Refresh</string>
    <string name="menu_title_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_title_nickname">Nickname</string>
    <string name="pref_summary_nickname">Lets other users identify you.</string>
    <string name="pref_title_uid">UUID</string>
    <string name="pref_title_suggestion_enabled">Enable Suggestions</string>
    <string name="ratings_improve_gs">Ratings improve GroupStreamer\'s effectiveness.</string>
    <string name="ratings_show_unrated_only">Show only unrated songs</string>
    <string name="ratings_like">How do you like this song ?</string>
    <string name="ratings_ok">OK</string>
    <string name="ratings_cancel">Cancel</string>
    <string name="rating_predicted">predicted from musical profile</string>
    <string name="rating_true">explicit user rating</string>
    <string name="rating_unknown">not yet computed</string>
    <string name="login_email_hint">E-mail address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_loginBtn">Log In</string>
    <string name="login_signup">New to GroupStreamer ?</string>
    <string name="login_signup_html"><![CDATA[New to GroupStreamer? <a href="#">Sign up</a>.]]></string>
    <string name="login_signing_in">Signing in&#8230;</string>
    <string name="login_menu_help">Help</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_error_occurred">Could not reset password</string>
    <string name="login_sent_email">An e-mail was sent to the provided address</string>
    <string name="groups_helpdialog_title">Welcome</string>
    <string name="groups_helpdialog_message">Want to learn how to use the application ?</string>
    <string name="groups_helpdialog_chkbox">Don\'t show this again</string>
    <string name="groups_helpdialog_yesBtn">Yes</string>
    <string name="groups_helpdialog_noBtn">No, thanks</string>
    <string name="groups_suggestion_title">Would you like to join a group with the following user(s)</string>
    <string name="groups_suggestion_yesBtn">Yes</string>
    <string name="groups_suggestion_noBtn">No, thanks</string>
    <string name="groups_suggestion_cBx">Do not ask me again</string>
    <string name="groups_suggestion_goto_settings">Activate Location Services</string>
    <string name="groups_suggestion_no_suggest">Suggestions disabled</string>
    <string name="groups_display_suggestion_enabled">Join users near me</string>
    <string name="groups_display_suggestion_disabled">No users near me</string>
    <string name="groups_alert_newgroup_title">New Group</string>
    <string name="groups_alert_newgroup_message">Pick a name for the group:</string>
    <string name="groups_alert_newgroup_ok">OK</string>
    <string name="groups_alert_newgroup_cancel">Cancel</string>
    <string name="groups_createBtn">Create group</string>
    <string name="groups_chooseGrp">or select one below :</string>
    <string name="groups_password_dialog_title">Enter group password</string>
    <string name="group_no_longer_exists_dialog_title">Ooops&#8230; this group no longer exists!</string>
    <string name="group_no_longer_exists_dialog_body">You can either create one with the same name.\nOr Jump back to the list of groups</string>
    <string name="automatic_group_no_longer_exists_body">You can go back to the groups list or continue browsing your history.</string>
    <string name="group_no_longer_exists_dialog_recreate_group">Recreate group</string>
    <string name="group_no_longer_exists_dialog_go_groups_activity">Go to history</string>
    <string name="main_set_password_title">Choose PIN</string>
    <string name="main_password_hint">Group Password</string>
    <string name="main_password_ok">OK</string>
    <string name="main_password_cancel">Cancel</string>
    <string name="main_success_setting_password">Successfully set Password</string>
    <string name="main_password_reset">Reset Password</string>
    <string name="solo_playlists_helpdialog_title">Welcome</string>
    <string name="solo_playlists_helpdialog_message">Want to learn how to use the application ?</string>
    <string name="solo_playlists_helpdialog_chkbox">Don\'t show this again</string>
    <string name="solo_playlists_helpdialog_yesBtn">Yes</string>
    <string name="solo_playlists_helpdialog_noBtn">No, thanks</string>
    <string name="solo_playlists_alert_newplaylist_title">New Playlist</string>
    <string name="solo_playlists_alert_newplaylist_message">Pick a name for the playlist:</string>
    <string name="solo_playlists_alert_newplaylist_ok">OK</string>
    <string name="solo_playlists_alert_newplaylist_cancel">Cancel</string>
    <string name="solo_playlists_createBtn">Create playlist</string>
    <string name="solo_playlists_choosePL">or select one below :</string>
    <string name="solo_playlists_fragment_local_list_row_image_desc">Playlist icon</string>
    <string name="solo_menu_create_playlist">New playlist</string>
    <string name="solo_playlists_localPL">My playlists</string>
    <string name="solo_playlists_remotePL">Available playlists</string>
    <string name="solo_playlists_noRemotePL">Sorry, no playlist is available</string>
    <string name="solo_playlists_dialog_pick_seedtype">Pick the seed type</string>
    <string name="solo_playlists_dialog_pick_seeds">Pick the seeds</string>
    <string name="solo_playlist_contains_no_track">No track</string>
    <string name="solo_playlist_contains_track">1 track</string>
    <string name="solo_playlist_contains_tracks">%d tracks</string>
    <string name="solo_playlists_fragment_local_tag">solo playlists fragment local</string>
    <string name="solo_playlists_fragment_remote_tag">solo playlists fragment remote</string>
    <string name="playlist_context_menu_item_delete">Delete</string>
    <string name="playlist_context_menu_item_share">Share with other users</string>
    <string name="playlist_context_menu_item_edit">Edit</string>
    <string name="playlist_context_menu_item_save">Save to phone</string>
    <string name="home_title">How many are you?</string>
    <string name="home_button_groups">Groups</string>
    <string name="home_button_groups_desc">Enter the groups mode</string>
    <string name="home_button_solo">Single-user mode</string>
    <string name="home_button_solo_desc">Enter the single-user mode</string>
    <string name="player_unknown">unknown</string>
    <string name="player_not_playing">No track playing</string>
    <string name="player_become_dj">Become the DJ</string>
    <string name="player_leave_dj">Leave DJ seat</string>
    <string name="player_cover">album cover</string>
    <string name="player_rate">Rate this song</string>
    <string name="player_rate_it">Rate it!</string>
    <string name="player_like">How do you like this song ?</string>
    <string name="player_ok">OK</string>
    <string name="player_cancel">Cancel</string>
    <string name="signup_signup">Sign up for GroupStreamer</string>
    <string name="signup_incentive">It takes mere seconds.</string>
    <string name="signup_email_hint">E-mail address</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_password_confirm_hint">Confirm password</string>
    <string name="signup_tou">I agree to the Terms of Use</string>
    <string name="signup_signupBtn">Sign Up</string>
    <string name="signup_signing_up">Signing up&#8230;</string>
    <string name="signup_form_missing_fields">Fields are missing.</string>
    <string name="signup_form_email_in_use">User already exists (e-mail address in use).</string>
    <string name="signup_form_email_invalid">E-mail address is invalid.</string>
    <string name="signup_form_password_invalid">Password is invalid.</string>
    <string name="signup_form_unable_to_create">Unable to create new user, please try again.</string>
    <string name="signup_form_fillout_fields">Please fill out all the fields.</string>
    <string name="signup_form_password_match">Passwords don\'t match.</string>
    <string name="signup_form_password_short">Password is too short.</string>
    <string name="signup_form_tou">You need to agree to the terms of use.</string>
    <string name="stats_not_playing">No track playing</string>
    <string name="stats_taste">How do people like this song ?</string>
    <string name="history_delete_label">Delete History</string>
    <string name="NFC_reciever_wait">Wainting for an NFC transmission</string>
    <string name="NFC_send_button">Share group!</string>
    <string name="NFC_processing_message">Received an NFC message, processing our next action!</string>
    <string name="error_generic_server_response">Server responded:</string>
    <string name="error_setting_password">Unable to set password</string>
    <string name="error_loading_groups">Unable to load the list of groups.</string>
    <string name="error_loading_playlists">Unable to load the list of playlists</string>
    <string name="error_loading_playlists_no_playlists">You haven\'t created any playlist</string>
    <string name="error_loading_tags">Unable to load the list of tags</string>
    <string name="error_joining_group">Unable to join the group.</string>
    <string name="error_creating_group">Unable to create the group.</string>
    <string name="error_creating_playlist">Unable to create the playlist</string>
    <string name="error_creating_playlist_no_tracks">Unable to create the playlist: you have no tracks</string>
    <string name="error_creating_playlist_no_tagged_tracks">Unable to create a playlist: the tracks are badly tagged</string>
    <string name="error_creating_group_empty_name">Unable to create a group with empty name.</string>
    <string name="error_creating_playlist_empty_name">Unable to create a group with empty name.</string>
    <string name="error_unauthorized">Incorrect password or e-mail address.</string>
    <string name="error_login_general">Unable to log in. Are you connected ?</string>
    <string name="error_loading_info">Unable to load the information.</string>
</resources>