<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item android:id="@+id/home"
        android:title="@string/activity_title_groups"/>

  <item android:id="@+id/menu_item_manage_group"
      android:title="@string/activity_title_manage" 
      android:visible="false"/>  
    
  <item android:id="@+id/menu_item_refresh"
      android:title="@string/menu_title_refresh"
      android:icon="@drawable/ic_menu_refresh"
      android:showAsAction="ifRoom|withText" />

  <item android:id="@+id/menu_item_ratings"
      android:title="@string/activity_title_ratings"
      android:icon="@drawable/ic_menu_star" />

  <item android:id="@+id/menu_item_prefs"
      android:title="@string/activity_title_prefs"
      android:icon="@drawable/ic_menu_preferences" />

  <item android:id="@+id/menu_item_help"
      android:title="@string/activity_title_help"
      android:icon="@drawable/ic_menu_help" />
  
  <item android:id="@+id/menu_item_history"
      android:title="@string/activity_title_history"
      android:icon="@drawable/ic_menu_help" />

    <item android:id="@+id/menu_item_solo"
      android:title="@string/activity_title_solo" />

  <item android:id="@+id/menu_item_logout"
      android:title="@string/menu_title_logout"
      android:icon="@drawable/ic_menu_logout" />

</menu>
