<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:gravity="center"
      android:text="@string/signup_signup"
      android:textAppearance="?android:attr/textAppearanceMedium"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/signup_incentive"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:layout_marginBottom="30dp"/>

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/signup_email_hint"
      android:layout_marginBottom="10dp" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/signup_password_hint" />

  <EditText
      android:id="@+id/password2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/signup_password_confirm_hint"
      android:layout_marginBottom="10dp" />

  <CheckBox
      android:id="@+id/touCbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:text="@string/signup_tou"/>

  <Button
      android:id="@+id/submitBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingLeft="60dp"
      android:paddingRight="60dp"
      android:text="@string/signup_signupBtn" />
  
  </LinearLayout>

</ScrollView>
