<?xml version="1.0" encoding="utf-8"?>

    
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    
  <ImageView
      android:id="@+id/splash"
      android:src="@drawable/splash"
      android:contentDescription="@string/app_name"
      android:layout_height="154dp"
      android:layout_width="192dp"
      android:scaleType="centerInside"
      android:layout_marginBottom="20dp"/>
  

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/login_email_hint"
      android:layout_marginLeft="40dp"
      android:layout_marginRight="40dp" >
  </EditText>

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:layout_marginLeft="40dp"
      android:layout_marginRight="40dp"
      android:hint="@string/login_password_hint" >
  </EditText>

  <Button
      android:id="@+id/loginBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="40dp"
      android:layout_marginRight="40dp"
      android:text="@string/login_loginBtn" />
  
  <Button
      android:id="@+id/forgotPwBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="40dp"
      android:layout_marginRight="40dp"
      android:text="@string/login_forgot_password" 
      android:onClick="resetPassword" />

  <TextView
      android:id="@+id/signupTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="@string/login_signup" />
  
  </LinearLayout>

</ScrollView>

