<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Alignment of buttons: http://stackoverflow.com/questions/2614936/how-to-center-buttons-on-screen-horizontally-and-vertically-plus-equidistant-apa -->
    
    <ImageButton
        android:id="@+id/home_button_groups"
        android:contentDescription="@string/home_button_groups_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_social_group"
        android:onClick="onButtonClickGroups"
        android:text="@string/home_button_groups"
        android:layout_centerInParent="true" />

    <ImageButton
        android:id="@+id/home_button_solo"
        android:contentDescription="@string/home_button_solo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_social_person"
        android:onClick="onButtonClickSolo"
        android:text="@string/home_button_solo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/home_button_groups"
        android:layout_marginTop="30dip" />

</RelativeLayout>