<?xml version="1.0" encoding="utf-8"?>
<!-- Generic row element for list displays -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

  <ImageView
      android:id="@+id/listrow_image"
      android:contentDescription="@string/solo_playlists_fragment_local_list_row_image_desc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginRight="20dp"
      android:src="@drawable/ic_menu_help" />

  <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_gravity="center"
      android:orientation="vertical">

  <TextView
      android:id="@+id/listrow_title"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/default_title"
      android:textAppearance="?android:attr/textAppearanceMedium" />
  <TextView
        android:id="@+id/listrow_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_subtitle" />

  <!-- Display short infos. For e.g. # tracks -->
  <!-- <TextView
      android:id="@+id/listrow_notifRight"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/defaul_title"
      android:textAppearance="?android:attr/textAppearanceSmall" /> -->
  </LinearLayout>

</LinearLayout>
